feat: complete project infrastructure setup
- Add MCP SDK (@modelcontextprotocol/sdk) and tsx dependencies
- Create organized directory structure (tests/, src/{services,utils,types}/)
- Enhance .gitignore with build output and TypeScript patterns

Infrastructure now ready for MCP server development.
Note: TypeScript build errors exist in implementation files (not infrastructure)

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,16 @@ node_modules/
 
 # Local Netlify folder
 .netlify
+
+# Build output
+dist/
+build/
+
+# Test output
+coverage/
+
+# TypeScript
+*.tsbuildinfo
+
+# MCP related
+.mcp-cache/
