--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@modelcontextprotocol/sdk": "^1.15.1",
     "@types/node": "^20.10.8",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
     "prettier": "^3.1.1",
+    "tsx": "^4.20.3",
     "typescript": "^5.3.3",
     "vitest": "^1.1.3"
   },
