feat: implement multi-translation scripture support with clean text extraction
- Add support for fetching ALL available Bible translations (ULT, UST, T4T, UEB, etc.)
- Implement clean USFM text extraction removing all markup and alignment data
- Add verse range support (e.g., 'Titus 1:1-3') and full chapter extraction
- Use DCS Ingredients Array pattern for dynamic resource discovery
- Remove rawUsfm from API responses, return only clean text
- Add new 'scriptures' array containing all available translations
- Fix missing book mappings for Titus and Philemon
- Create comprehensive USFM text extraction utilities
- Update documentation with new features and examples
- Bump version to 1.3.0

BREAKING CHANGE: Removed rawUsfm field from scripture responses

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "translation-helps-api",
-  "version": "1.2.3",
-  "description": "Serverless API for Bible translation resources via Netlify Functions",
+  "version": "1.3.0",
+  "description": "Serverless API for aggregating Bible translation resources from Door43",
   "type": "module",
   "scripts": {
     "dev": "netlify dev",
