feat: implement dynamic resource fetching using ingredients array
- Rewrite translation notes, questions, and words fetching to use catalog search
- Follow the SACRED INGREDIENTS ARRAY pattern from documentation
- No more hardcoded file paths - everything is dynamic
- Fix uppercase/lowercase book code issues
- Add proper error handling and logging

BREAKING CHANGE: Resources now require proper catalog entries with ingredients arrays

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,8 @@
 [build]
   functions = "netlify/functions"
   publish = "."
+  # Set API_VERSION from package.json during build
+  command = "export API_VERSION=$(node -p \"require('./package.json').version\") && echo \"API_VERSION=$API_VERSION\" >> .env && npm run build"
 
 [build.environment]
   NODE_VERSION = "18"
