--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,9 @@
-# Netlify Configuration for Translation Helps API
+# Netlify Configuration for Translation Helps API + UI
 
 [build]
   functions = "netlify/functions"
-  publish = "."
-  # Set API_VERSION from package.json during build
-  command = "export API_VERSION=$(node -p \"require('./package.json').version\") && echo \"API_VERSION=$API_VERSION\" >> .env && npm run build"
+  publish = "ui/build"
+  command = "npm run build:all"
 
 [build.environment]
   NODE_VERSION = "18"
@@ -15,6 +14,12 @@
   to = "/.netlify/functions/:splat"
   status = 200
   force = true
+
+# Handle SvelteKit routing - serve index.html for all routes
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
 
 # CORS headers for API endpoints
 [[headers]]
