--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "netlify dev",
     "prebuild": "echo '{\"version\": \"'$npm_package_version'\"}' > netlify/functions/_shared/version.json",
     "build": "tsc && cp netlify/functions/_shared/version.json dist/netlify/functions/_shared/",
+    "build:ui": "cd ui && npm install && npm run build",
+    "build:all": "npm run build && npm run build:ui",
     "test": "vitest",
     "test:watch": "vitest watch",
     "lint": "eslint . --ext .ts,.tsx",
