fix: correct package name to translation-helps-mcp and update description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "translation-helps-api",
+  "name": "translation-helps-mcp",
   "version": "2.1.0",
-  "description": "Serverless API for aggregating Bible translation resources from Door43",
+  "description": "MCP Server for aggregating Bible translation resources from Door43",
   "type": "module",
   "scripts": {
     "dev": "netlify dev",
