feat: v3.4.0 - Comprehensive Testing Suite
✨ Major testing infrastructure release with exhaustive coverage:

🧪 Test Suite Features:
- Smoke tests for quick health checks
- Parity tests ensuring API/MCP identical responses
- Regression tests preventing previously fixed bugs
- Performance tests validating response times
- Error handling tests for edge cases

🔧 Technical Improvements:
- MCP wrapper refactoring (eliminates code duplication)
- Automated test runner with detailed reporting
- Vitest framework integration
- Response normalization utilities
- CI/CD ready test infrastructure

🛡️ Regression Prevention:
- Double JSON wrapping detection
- Missing scripture data validation
- Hardcoded file path checks
- Fake citation prevention
- Empty response monitoring
- Book code mapping verification

📚 Complete Documentation:
- Test suite README with usage examples
- Package.json script integration
- Enhanced main README with testing highlights

This release ensures project stability and prevents the regressions
that were plaguing development. All endpoints now have comprehensive
test coverage with automated validation.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "translation-helps-mcp",
-  "version": "3.3.1",
+  "version": "3.4.0",
   "description": "MCP Server for aggregating Bible translation resources from Door43",
   "type": "module",
   "scripts": {
@@ -15,7 +15,12 @@
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit",
     "deploy": "netlify deploy --prod",
-    "logs": "netlify functions:log"
+    "logs": "netlify functions:log",
+    "test:smoke": "vitest run tests/smoke.test.ts",
+    "test:parity": "vitest run tests/endpoint-parity.test.ts",
+    "test:regression": "vitest run tests/regression.test.ts",
+    "test:unit": "vitest run tests/DCSApiClient.test.ts",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@netlify/blobs": "^10.0.6",
