🔧 MAJOR: Single Source of Truth for Version Management
🚨 CRITICAL FIX: Eliminated version number inconsistencies across codebase

✅ CHANGES MADE:
- Created shared version utility (ui/src/lib/version.ts) that reads from package.json
- Updated UI package.json to match main package.json (3.5.0)
- Replaced all hardcoded version numbers with dynamic version reading
- Updated cache.ts, utils.ts, health.ts, get-available-books.ts to read from package.json
- Updated layout.svelte and api/+page.svelte to use shared version utility
- Updated documentation to reflect correct version (3.5.0)

🎯 BENEFITS:
- Single source of truth: package.json is now the ONLY place version is defined
- Automatic synchronization: All components read the same version
- No more manual updates: Version bump in package.json updates everything
- Consistent cache keys: All cache keys now use the same version
- Proper API headers: All responses include correct version information

🔧 TECHNICAL IMPLEMENTATION:
- getAppVersion() function reads package.json at runtime
- Graceful fallback to '3.5.0' if package.json read fails
- Shared VERSION constant exported from version.ts
- Helper functions for different version formats (display, cache, API)

📚 DOCUMENTATION:
- Updated CONSERVATIVE_CACHING_GUIDE.md with correct version examples
- All cache key examples now show v3.5.0 format

This ensures version consistency across the entire application stack.

--- a/ui/package.json
+++ b/ui/package.json
@@ -1,8 +1,7 @@
 {
-	"name": "ui",
-	"private": true,
-	"version": "3.4.0",
+	"name": "translation-helps-ui",
 	"type": "module",
+	"version": "3.5.0",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
