feat: USFM parsing performance optimizations v3.6.0
🚀 Major performance improvements for verse ranges and chapter ranges:

Verse Range Optimization:
- Eliminated redundant chapter parsing for multi-verse requests
- 2 verses: 50% fewer operations
- 10 verses (e.g., Matthew 5:3-12): 90% fewer operations
- 50 verses (long passages): 98% fewer operations

Chapter Range Optimization:
- New extractChapterRange() function for efficient multi-chapter extraction
- 3 chapters: 67% fewer USFM processing operations
- 10 chapters: 90% fewer USFM processing operations

Algorithmic Improvements:
- Verse ranges now find chapter once vs N times (N = verse count)
- Chapter ranges now split USFM once vs N times (N = chapter count)
- Smart caching of chapter parsing eliminates redundant work

Real-World Impact:
- Faster API responses for scripture ranges
- Reduced CPU usage and better mobile performance
- Improved scalability under load

Testing:
- Added comprehensive 51-test scripture suite
- Multi-organization fallback support (unfoldingWord + Door43/STR/WA/translate)
- Full coverage of single verses, ranges, chapters, abbreviations, edge cases

Technical Changes:
- Enhanced src/utils/usfmExtractor.ts and netlify/functions/_shared/usfm-extractor.ts
- Updated resource aggregators to use optimized functions
- Added extractChapterRange() for multi-chapter processing
- Version bumped to 3.6.0 with detailed changelog

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "translation-helps-mcp",
-  "version": "3.5.1",
+  "version": "3.6.0",
   "description": "MCP Server for aggregating Bible translation resources from Door43",
   "type": "module",
   "scripts": {
@@ -20,6 +20,7 @@
     "test:parity": "vitest run tests/endpoint-parity.test.ts",
     "test:regression": "vitest run tests/regression.test.ts",
     "test:unit": "vitest run tests/DCSApiClient.test.ts",
+    "test:scripture": "vitest run tests/scripture-comprehensive.test.ts",
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
