fix(netlify): Add client-side routing fallback for SvelteKit
🐛 Bug Fix:
- Added catch-all redirect for client-side routing in Netlify
- Routes like /mcp-tools, /rag-manifesto now work on direct access
- API routes still redirect to functions (force=true takes precedence)
- Client-side fallback only applies when no other redirects match (force=false)

🏗️ Technical Details:
- API redirects: /api/* → /.netlify/functions/* (force=true)
- SPA fallback: /* → /index.html (force=false)
- Order matters: API redirects processed first

📦 This fixes production routing for all UI pages

--- a/netlify.toml
+++ b/netlify.toml
@@ -28,6 +28,13 @@
     Access-Control-Allow-Headers = "Content-Type, Authorization"
     Cache-Control = "public, max-age=300"
 
+# SvelteKit client-side routing fallback (exclude API routes)
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+  force = false
+
 # Function-specific configuration
 [functions]
   directory = "netlify/functions"
