--- a/netlify.toml
+++ b/netlify.toml
@@ -28,12 +28,38 @@
     Access-Control-Allow-Headers = "Content-Type, Authorization"
     Cache-Control = "public, max-age=300"
 
-# SvelteKit client-side routing fallback (exclude API routes)
+# SvelteKit client-side routing for specific UI routes
 [[redirects]]
-  from = "/*"
+  from = "/mcp-tools"
   to = "/index.html"
   status = 200
-  force = false
+
+[[redirects]]
+  from = "/rag-manifesto"
+  to = "/index.html"
+  status = 200
+
+
+
+[[redirects]]
+  from = "/chat"
+  to = "/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/test"
+  to = "/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/performance"
+  to = "/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/about"
+  to = "/index.html"
+  status = 200
 
 # Function-specific configuration
 [functions]
