fix(spa): Use proper SPA fallback pattern for client-side routing
✨ The Correct Solution:
- Single catch-all redirect: /* → /index.html
- Removed all specific route redirects (unnecessary)
- API routes still work: /api/* → /.netlify/functions/* (force=true takes priority)
- SvelteKit reads window.location.pathname and renders correct component

🧠 Key Insight:
This is how SPAs are supposed to work! We don't need static files or complex redirects.
Just serve index.html for all non-API routes and let client-side routing handle it.

📦 Should finally fix direct URL access for all pages

--- a/netlify.toml
+++ b/netlify.toml
@@ -28,36 +28,10 @@
     Access-Control-Allow-Headers = "Content-Type, Authorization"
     Cache-Control = "public, max-age=300"
 
-# SvelteKit client-side routing for specific UI routes
+# SPA fallback: serve index.html for all non-API routes
+# This must come AFTER the API redirect (lower priority)
 [[redirects]]
-  from = "/mcp-tools"
-  to = "/index.html"
-  status = 200
-
-[[redirects]]
-  from = "/rag-manifesto"
-  to = "/index.html"
-  status = 200
-
-
-
-[[redirects]]
-  from = "/chat"
-  to = "/index.html"
-  status = 200
-
-[[redirects]]
-  from = "/test"
-  to = "/index.html"
-  status = 200
-
-[[redirects]]
-  from = "/performance"
-  to = "/index.html"
-  status = 200
-
-[[redirects]]
-  from = "/about"
+  from = "/*"
   to = "/index.html"
   status = 200
 
