debug: Add test redirect to diagnose netlify.toml issues
🔍 Debug Test:
- Added simple redirect: /test-redirect → / (301)
- Will help determine if redirects work at all
- Headers work but redirects don't - investigating why

📦 If test redirect works, issue is with our SPA redirect syntax
📦 If test redirect fails, entire redirects section is broken

--- a/netlify.toml
+++ b/netlify.toml
@@ -28,6 +28,12 @@
     Access-Control-Allow-Headers = "Content-Type, Authorization"
     Cache-Control = "public, max-age=300"
 
+# Test redirect to debug
+[[redirects]]
+  from = "/test-redirect"
+  to = "/"
+  status = 301
+
 # SPA fallback: serve index.html for all non-API routes
 # This must come AFTER the API redirect (lower priority)
 [[redirects]]
