--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "MCP Server for aggregating Bible translation resources from Door43",
   "type": "module",
   "scripts": {
-    "dev": "netlify dev",
-    "prebuild": "echo '{\"version\": \"'$npm_package_version'\"}' > netlify/functions/_shared/version.json",
-    "build": "tsc && cp netlify/functions/_shared/version.json dist/netlify/functions/_shared/",
-    "build:ui": "cd ui && npm install && npm run build",
-    "build:all": "npm run build && npm run build:ui",
+    "dev": "cd ui && npm run dev",
+    "build": "cd ui && npm install && npm run build",
+    "build:netlify": "cd ui && npm install && npm run build",
+    "build:cloudflare": "cd ui && npm install && npm run build:cloudflare",
+    "preview": "cd ui && npm run preview",
+    "preview:netlify": "cd ui && npm run preview",
+    "preview:cloudflare": "cd ui && npx wrangler pages dev build",
     "test": "vitest",
     "test:watch": "vitest watch",
     "lint": "eslint . --ext .ts,.tsx",
