fix: add Wrangler temp files to gitignore
- Add .wrangler/ directory to prevent committing build artifacts
- Add ui/build/ to gitignore for build output
- Add wrangler.toml.bak for backup files
- Keeps repository clean from Cloudflare development files

--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,14 @@ node_modules/
 # Local Netlify folder
 .netlify
 
+# Cloudflare Wrangler
+.wrangler/
+wrangler.toml.bak
+
 # Build output
 dist/
 build/
+ui/build/
 
 # Test output
 coverage/
