fix: use correct environment names for Cloudflare Pages
- Change 'dev' to 'preview' in wrangler.toml
- Cloudflare Pages only supports 'preview' and 'production' environments
- This fixes the validation error during deployment

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,7 +6,7 @@ pages_build_output_dir = "ui/build"
 [env.production.vars]
   NODE_ENV = "production"
 
-[env.dev.vars]
+[env.preview.vars]
   NODE_ENV = "development"
 
 # For Pages deployment, use: npx wrangler pages deploy ui/build
