feat: implement platform-agnostic function architecture
🎯 New Architecture:
- Platform-agnostic business logic in src/functions/
- Auto-generated wrappers for both Netlify and Cloudflare
- Shared code eliminates duplication across platforms
- Same API endpoints work on both Netlify and SvelteKit

🛠️ Key Components:
- Platform adapter layer for request/response abstraction
- Shared handlers in src/functions/handlers/
- Auto-generation script for platform wrappers
- Updated build commands for multi-platform deployment

🚀 Benefits:
- Write once, deploy anywhere
- Consistent API behavior across platforms
- Easy testing of business logic
- Flexible deployment options

✅ Commands:
- npm run generate:functions (create wrappers)
- npm run build:cloudflare-full (Cloudflare deployment)
- npm run build:netlify (Netlify deployment)

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "cd ui && npm install && npm run build",
     "build:netlify": "cd ui && npm install && npm run build",
     "build:cloudflare": "cd ui && npm install && npm run build:cloudflare",
+    "build:cloudflare-full": "npm install && node scripts/generate-platform-functions.js && cd ui && npm install && npm run build:cloudflare",
+    "generate:functions": "node scripts/generate-platform-functions.js",
     "preview": "cd ui && npm run preview",
     "preview:netlify": "cd ui && npm run preview",
     "preview:cloudflare": "cd ui && npx wrangler pages dev build",
