🔧 Fix: Establish Single Source of Truth for Version Management
PROBLEM SOLVED:
❌ 14+ scattered version references across codebase
❌ Version drift between different components
❌ Manual updates required in multiple places
❌ High chance of missing version references during releases

SOLUTION IMPLEMENTED:
✅ ROOT package.json as SINGLE SOURCE OF TRUTH
✅ All components now dynamically read version at runtime
✅ Automatic version sync script for UI package.json
✅ Removed redundant version.json files

CHANGES:
- Modified all handlers to read from root package.json
- Created getVersion() functions with proper fallbacks
- Added npm run sync-version script
- Deleted src/functions/version.json
- Deleted netlify/functions/_shared/version.json
- Created docs/VERSION_MANAGEMENT.md guide

RELEASE PROCESS NOW:
1. Update ONLY root package.json ✅
2. Run npm run sync-version ✅
3. Done! All endpoints automatically consistent ✅

No more version hell! 🎉

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test:regression": "vitest run tests/regression.test.ts",
     "test:unit": "vitest run tests/DCSApiClient.test.ts",
     "test:scripture": "vitest run tests/scripture-comprehensive.test.ts",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "sync-version": "node scripts/sync-version.js"
   },
   "dependencies": {
     "@netlify/blobs": "^10.0.6",
