--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,13 @@
 name = "translation-helps-mcp"
 compatibility_date = "2025-01-15"
-pages_build_output_dir = "ui/build"
+pages_build_output_dir = "ui/.svelte-kit/cloudflare"
 
 # Enable Node.js compatibility for fs, path, etc.
 compatibility_flags = ["nodejs_compat"]
+
+# Build configuration
+[build]
+command = "cd ui && npm install && npm run build:cloudflare-full"
 
 # Cloudflare Pages specific configuration
 [env.production.vars]
