--- a/ui/package.json
+++ b/ui/package.json
@@ -28,7 +28,6 @@
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/typography": "^0.5.16",
-		"@tailwindcss/vite": "^4.0.0",
 		"@vitest/browser": "^3.2.3",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
@@ -41,7 +40,6 @@
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"svelte": "^5.25.0",
 		"svelte-check": "^4.0.0",
-		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^7.0.4",
@@ -50,8 +48,10 @@
 		"vitest-browser-svelte": "^0.1.0"
 	},
 	"dependencies": {
+		"@tailwindcss/vite": "^4.0.0",
 		"@types/node": "^24.0.14",
 		"lucide-svelte": "^0.525.0",
-		"marked": "^16.1.1"
+		"marked": "^16.1.1",
+		"tailwindcss": "^4.0.0"
 	}
 }
