fix: use npx for svelte-kit commands to ensure they're found
- Changed svelte-kit sync to npx svelte-kit sync in prepare script
- Changed check and check:watch scripts to use npx as well
- This ensures SvelteKit commands are found during build process
- Fixes missing .svelte-kit/tsconfig.json error

--- a/ui/package.json
+++ b/ui/package.json
@@ -8,9 +8,9 @@
 		"build:cloudflare": "cp svelte.config.cloudflare.js svelte.config.js && npx vite build && git checkout svelte.config.js",
 		"build:cloudflare-full": "cd .. && node scripts/generate-platform-functions.js && cd ui && npm run build:cloudflare",
 		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"prepare": "npx svelte-kit sync || echo ''",
+		"check": "npx svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "npx svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
 		"test:unit": "vitest",
