fix: move SvelteKit packages to dependencies and fix sync command
- Moved @sveltejs/kit and @sveltejs/vite-plugin-svelte to dependencies
- These packages are required during production build process
- Fixed sync command from 'npx svelte-kit sync' to 'npx @sveltejs/kit sync'
- Cloudflare production builds need build-time dependencies in dependencies section

--- a/ui/package.json
+++ b/ui/package.json
@@ -8,9 +8,9 @@
 		"build:cloudflare": "cp svelte.config.cloudflare.js svelte.config.js && npx vite build && git checkout svelte.config.js",
 		"build:cloudflare-full": "cd .. && node scripts/generate-platform-functions.js && cd ui && npm run build:cloudflare",
 		"preview": "vite preview",
-		"prepare": "npx svelte-kit sync || echo ''",
-		"check": "npx svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "npx svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"prepare": "npx @sveltejs/kit sync || echo ''",
+		"check": "npx @sveltejs/kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "npx @sveltejs/kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
 		"test:unit": "vitest",
@@ -25,8 +25,6 @@
 		"@playwright/test": "^1.49.1",
 		"@sveltejs/adapter-cloudflare": "^7.1.0",
 		"@sveltejs/adapter-netlify": "^5.0.0",
-		"@sveltejs/kit": "^2.22.0",
-		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/typography": "^0.5.16",
 		"@vitest/browser": "^3.2.3",
 		"eslint": "^9.18.0",
@@ -48,6 +46,8 @@
 		"vitest-browser-svelte": "^0.1.0"
 	},
 	"dependencies": {
+		"@sveltejs/kit": "^2.22.0",
+		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/node": "^24.0.14",
 		"lucide-svelte": "^0.525.0",
