feat: fix client-side errors and enhance health monitoring
- Fix JavaScript runtime errors from Node.js imports in browser
- Reorganize health endpoints by Core/Extended/Experimental categories
- Update version to 4.4.0 with automatic sync across components
- Prepare for health status integration in navigation menu
- Update documentation and changelog

🔧 Infrastructure: Fixed critical browser compatibility issues
📊 Health System: Added categorized endpoint monitoring
🚀 Version: Enhanced build-time version synchronization

--- a/ui/package.json
+++ b/ui/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "translation-helps-ui",
 	"type": "module",
-	"version": "4.3.0",
+	"version": "4.4.0",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
-		"build:cloudflare": "cp svelte.config.cloudflare.js svelte.config.js && npx vite build && git checkout svelte.config.js",
+		"build": "node ../scripts/sync-version.js && vite build",
+		"build:cloudflare": "node ../scripts/sync-version.js && cp svelte.config.cloudflare.js svelte.config.js && npx vite build && git checkout svelte.config.js",
 		"build:cloudflare-full": "cd .. && node scripts/generate-platform-functions.js && cd ui && npm run build:cloudflare",
 		"preview": "vite preview",
 		"prepare": "npx @sveltejs/kit sync || echo ''",
