--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "preview:cloudflare": "cd ui && npx wrangler pages dev build",
     "test": "vitest",
     "test:watch": "vitest watch",
-    "lint": "eslint . --ext .ts,.tsx",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "terminology:check": "npm run lint && echo '✅ Terminology check passed'",
     "typecheck": "tsc --noEmit",
     "deploy": "netlify deploy --prod",
     "logs": "netlify functions:log",
@@ -25,8 +28,10 @@
     "test:regression": "vitest run tests/regression.test.ts",
     "test:unit": "vitest run tests/DCSApiClient.test.ts",
     "test:scripture": "vitest run tests/scripture-comprehensive.test.ts",
+    "test:terminology": "vitest run tests/terminology-unit.test.ts",
     "test:coverage": "vitest run --coverage",
-    "sync-version": "node scripts/sync-version.js"
+    "sync-version": "node scripts/sync-version.js",
+    "prepare": "husky"
   },
   "dependencies": {
     "@netlify/blobs": "^10.0.6",
@@ -35,14 +40,19 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
     "@modelcontextprotocol/sdk": "^1.15.1",
     "@types/node": "^20.10.8",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
+    "globals": "^16.3.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
     "prettier": "^3.1.1",
     "tsx": "^4.20.3",
     "typescript": "^5.3.3",
+    "typescript-eslint": "^8.38.0",
     "vitest": "^1.1.3"
   },
   "engines": {
@@ -61,5 +71,18 @@
     "door43"
   ],
   "author": "Christopher Klapp",
-  "license": "MIT"
+  "license": "MIT",
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md,yml,yaml}": [
+      "prettier --write"
+    ],
+    "src/functions/handlers/*.ts": [
+      "eslint --fix",
+      "node -e \"console.log('📋 Reminder: Use UW-specific resource descriptions and terminology')\""
+    ]
+  }
 }
