--- a/package.json
+++ b/package.json
@@ -30,6 +30,14 @@
     "test:scripture": "vitest run tests/scripture-comprehensive.test.ts",
     "test:terminology": "vitest run tests/terminology-unit.test.ts",
     "test:coverage": "vitest run --coverage",
+    "load-test:baseline": "cd tests/load/k6 && k6 run baseline.js",
+    "load-test:peak": "cd tests/load/k6 && k6 run peak.js",
+    "load-test:stress": "cd tests/load/k6 && k6 run stress.js",
+    "load-test:spike": "cd tests/load/k6 && k6 run spike.js",
+    "load-test:soak": "cd tests/load/k6 && k6 run soak.js",
+    "load-test:critical": "cd tests/load/k6 && RUN_MODE=critical node run-all-tests.js",
+    "load-test:all": "cd tests/load/k6 && RUN_MODE=all node run-all-tests.js",
+    "load-test:performance": "cd tests/load/k6 && RUN_MODE=performance node run-all-tests.js",
     "sync-version": "node scripts/sync-version.js",
     "prepare": "husky"
   },
