feat: implement comprehensive chaos engineering test suite
- Add chaos monkey framework for controlled failure injection
- Create upstream failures tests (DCS API timeouts, outages)
- Create cache layer failure tests (outages, corruption, circuit breakers)
- Create network partition tests (connectivity issues, offline modes)
- Create data corruption tests (invalid responses, integrity validation)
- Add orchestrated chaos test runner with safety controls
- Include comprehensive reporting and CI/CD integration
- Add production protection and risk management
- Complete Task 15: Chaos Engineering Tests from Phase 5

The system can now be deliberately broken in controlled ways to validate
resilience, graceful degradation, and automatic recovery capabilities.
Netflix would be proud! 🐒💥

--- a/package.json
+++ b/package.json
@@ -38,6 +38,12 @@
     "load-test:critical": "cd tests/load/k6 && RUN_MODE=critical node run-all-tests.js",
     "load-test:all": "cd tests/load/k6 && RUN_MODE=all node run-all-tests.js",
     "load-test:performance": "cd tests/load/k6 && RUN_MODE=performance node run-all-tests.js",
+    "chaos:upstream": "vitest run tests/chaos/upstream-failures.test.ts",
+    "chaos:cache": "vitest run tests/chaos/cache-failures.test.ts",
+    "chaos:network": "vitest run tests/chaos/network-partitions.test.ts",
+    "chaos:data": "vitest run tests/chaos/data-corruption.test.ts",
+    "chaos:safe": "cd tests/chaos && CHAOS_MODE=safe node run-all-chaos-tests.ts",
+    "chaos:all": "cd tests/chaos && CHAOS_MODE=aggressive node run-all-chaos-tests.ts",
     "sync-version": "node scripts/sync-version.js",
     "prepare": "husky"
   },
