--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test:regression": "vitest run tests/regression.test.ts",
     "test:unit": "vitest run tests/DCSApiClient.test.ts",
     "test:scripture": "vitest run tests/scripture-comprehensive.test.ts",
+    "test:parameters": "vitest run tests/scripture-parameters.test.ts",
     "test:terminology": "vitest run tests/terminology-unit.test.ts",
     "test:coverage": "vitest run --coverage",
     "load-test:baseline": "cd tests/load/k6 && k6 run baseline.js",
