WIP: Add new endpoints and fix scripture service issues

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "cd ui && npm run dev",
+    "dev:workspace": "cd ui && npm run dev",
     "build": "cd ui && npm install && npm run build",
     "build:netlify": "cd ui && npm install && npm run build",
     "build:cloudflare": "cd ui && npm install && npm run build:cloudflare",
@@ -60,10 +61,12 @@
     "@types/node": "^20.10.8",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
+    "concurrently": "^9.2.0",
     "eslint": "^8.56.0",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
+    "nodemon": "^3.1.10",
     "prettier": "^3.1.1",
     "tsx": "^4.20.3",
     "typescript": "^5.3.3",
