--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "lint-staged": "^16.1.2",
     "nodemon": "^3.1.10",
     "prettier": "^3.1.1",
+    "prettier-plugin-svelte": "^3.4.0",
     "tsx": "^4.20.3",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.38.0",
