--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "nodemon": "^3.1.10",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.4.0",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tsx": "^4.20.3",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.38.0",
