--- a/ui/package.json
+++ b/ui/package.json
@@ -22,6 +22,8 @@
 		"@eslint/js": "^9.18.0",
 		"@fontsource/fira-mono": "^5.0.0",
 		"@playwright/test": "^1.49.1",
+		"@sveltejs/adapter-cloudflare": "^7.1.1",
+		"@sveltejs/adapter-static": "^3.0.8",
 		"@tailwindcss/typography": "^0.5.16",
 		"@vitest/browser": "^3.2.3",
 		"eslint": "^9.18.0",
@@ -44,7 +46,6 @@
 	"dependencies": {
 		"@modelcontextprotocol/sdk": "^1.15.1",
 		"@neoconfetti/svelte": "^2.0.0",
-		"@sveltejs/adapter-cloudflare": "^7.1.0",
 		"@sveltejs/adapter-netlify": "^5.0.0",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
