Fix: Configure dedicated port 8174 and remove broken Functions approach

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -102,4 +102,4 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: pages deploy ui/.svelte-kit/cloudflare --project-name=translation-helps-mcp --functions=ui/functions
+          command: pages deploy ui/.svelte-kit/cloudflare --project-name=translation-helps-mcp
