--- a/ui/package.json
+++ b/ui/package.json
@@ -13,7 +13,8 @@
 		"check:watch": "npx @sveltejs/kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
-		"test:unit": "vitest",
+		"test:unit": "vitest run",
+		"test:watch": "vitest",
 		"test": "npm run test:unit -- --run && npm run test:e2e",
 		"test:e2e": "playwright test"
 	},
